--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,6 @@
 [defaults]
 host_key_checking = False
+# Use the YAML callback plugin.
+stdout_callback = unixy
+# Use the stdout_callback when running ad-hoc commands.
+bin_ansible_callbacks = True
